# ACEDD

./: CMakeLists.txt  LICENSE  README.md
apps/: acedd_app.cpp
include/: acedd.h  acedd_quant.h  fuzzy_10bin.h  fuzzy_24bin.h
src/: acedd.cpp  acedd_quant.cpp  fuzzy_10bin.cpp  fuzzy_24bin.cpp
